--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.css"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!--Header-->
@@ -75,29 +86,104 @@
           </li>
         </ul>
       </section>
-      <!-- Section3 -->
+      <!-- Section3 Our team  -->
       <section>
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="./images/mark.jpg" alt="Mark Guerrero" width="264" />
+            <img src="./images/team/mark.jpg" alt="Mark Guerrero" width="264" />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/tom.jpg" alt="Tom Ford" width="264" />
+            <img src="./images/team/tom.jpg" alt="Tom Ford" width="264" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/camila.jpg" alt="Camila Garcia" width="264" />
+            <img
+              src="./images/team/camila.jpg"
+              alt="Camila Garcia"
+              width="264"
+            />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/daniel.jpg" alt="Daniel Wilson" width="264" />
+            <img
+              src="./images/team/daniel.jpg"
+              alt="Daniel Wilson"
+              width="264"
+            />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
+      <!--Section4 Our portfolio-->
+      <section>
+        <h2>Our Portfolio</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/portfolio/banking app.jpg"
+              alt="banking app"
+              width="360"
+              height="300"
+            />
+
+            <h3>Banking app</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/cashless payment.jpg"
+              alt="cashless payment"
+              width="360"
+              height="300"
+            />
+            <h3>Cashless Payment</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/meditation app.jpg"
+              alt="mediation app"
+              width="360"
+              height="300"
+            />
+            <h3>Meditation App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/taxi service.jpg"
+              alt="taxi service"
+              width="360"
+              height="300"
+            />
+            <h3>Taxi Service</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/screen illustrations.jpg"
+              alt="screen illustrations"
+              width="360"
+              height="300"
+            />
+            <h3>Screen Illustrations</h3>
+            <p>Design</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/online course.jpg"
+              alt="online course"
+              width="360"
+              height="300"
+            />
+            <h3>Online Courses</h3>
+            <p>Marketing</p>
           </li>
         </ul>
       </section>
