--- a/index.html
+++ b/index.html
@@ -20,26 +20,33 @@
     <!--Header-->
     <header>
       <nav>
-        <a href="./index.html">WebStudio </a>
+        <a class="logo" href="./index.html"
+          ><span class="web-logo">Web</span
+          ><span class="studio-logo">Studio</span>
+        </a>
         <ul>
           <li>
-            <a href="">Studio</a>
+            <a class="link-hover" href="">Studio</a>
           </li>
           <li>
-            <a href="">Portfolio</a>
+            <a class="link-hover" href="">Portfolio</a>
           </li>
           <li>
-            <a href="">Contacts</a>
+            <a class="link-hover" href="">Contacts</a>
           </li>
         </ul>
       </nav>
       <address>
         <ul>
           <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="link-hover-contacts" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
           <li>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a class="link-hover-contacts" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
@@ -47,39 +54,44 @@
     <!--Main-->
     <main>
       <!-- Section1 -->
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="section-background">
+        <h1>
+          Effective Solutions <br />
+          for Your Business
+        </h1>
+        <button class="button-style" type="button">
+          <span class="button-text">Order Service</span>
+        </button>
       </section>
       <!-- Section2 -->
       <section>
-        <h2>Lorem ipsum dolor sit amet.</h2>
+        <h2 hidden>Lorem ipsum dolor sit amet.</h2>
         <ul>
           <li>
-            <h3>Strategy</h3>
+            <h3 class="third-header-style">Strategy</h3>
 
-            <p>
+            <p class="third-header-body">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="third-header-style">Punctuality</h3>
+            <p class="third-header-body">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="third-header-style">Diligence</h3>
+            <p class="third-header-body">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="third-header-style">Technologies</h3>
+            <p class="third-header-body">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -88,17 +100,17 @@
       </section>
       <!-- Section3 Our team  -->
       <section>
-        <h2>Our Team</h2>
+        <h2 class="second-header-style">Our Team</h2>
         <ul>
           <li>
             <img src="./images/team/mark.jpg" alt="Mark Guerrero" width="264" />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="third-header-style">Mark Guerrero</h3>
+            <p class="third-header-body">Product Designer</p>
           </li>
           <li>
             <img src="./images/team/tom.jpg" alt="Tom Ford" width="264" />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="third-header-style">Tom Ford</h3>
+            <p class="third-header-body">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -106,8 +118,8 @@
               alt="Camila Garcia"
               width="264"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="third-header-style">Camila Garcia</h3>
+            <p class="third-header-body">Marketing</p>
           </li>
           <li>
             <img
@@ -115,14 +127,14 @@
               alt="Daniel Wilson"
               width="264"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="third-header-style">Daniel Wilson</h3>
+            <p class="third-header-body">UI Designer</p>
           </li>
         </ul>
       </section>
       <!--Section4 Our portfolio-->
       <section>
-        <h2>Our Portfolio</h2>
+        <h2 class="second-header-style">Our Portfolio</h2>
         <ul>
           <li>
             <img
@@ -132,8 +144,8 @@
               height="300"
             />
 
-            <h3>Banking app</h3>
-            <p>App</p>
+            <h3 class="third-header-style">Banking app</h3>
+            <p class="third-header-body">App</p>
           </li>
           <li>
             <img
@@ -142,8 +154,8 @@
               width="360"
               height="300"
             />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+            <h3 class="third-header-style">Cashless Payment</h3>
+            <p class="third-header-body">Marketing</p>
           </li>
           <li>
             <img
@@ -152,8 +164,8 @@
               width="360"
               height="300"
             />
-            <h3>Meditation App</h3>
-            <p>App</p>
+            <h3 class="third-header-style">Meditation App</h3>
+            <p class="third-header-body">App</p>
           </li>
           <li>
             <img
@@ -162,8 +174,8 @@
               width="360"
               height="300"
             />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+            <h3 class="third-header-style">Taxi Service</h3>
+            <p class="third-header-body">Marketing</p>
           </li>
           <li>
             <img
@@ -172,8 +184,8 @@
               width="360"
               height="300"
             />
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+            <h3 class="third-header-style">Screen Illustrations</h3>
+            <p class="third-header-body">Design</p>
           </li>
           <li>
             <img
@@ -182,16 +194,19 @@
               width="360"
               height="300"
             />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+            <h3 class="third-header-style">Online Courses</h3>
+            <p class="third-header-body">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
     <!-- Footer -->
-    <footer>
-      <a href="./index.html">WebStudio </a>
-      <p>
+    <footer class="footer-background">
+      <a class="logo" href="./index.html"
+        ><span class="web-logo">Web</span
+        ><span class="footer-studio-logo">Studio</span>
+      </a>
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
