--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <ul>
           <li>
             <img
-              src="./images/portfolio/banking app.jpg"
+              src="./images/portfolio/banking-app.jpg"
               alt="banking app"
               width="360"
               height="300"
@@ -149,7 +149,7 @@
           </li>
           <li>
             <img
-              src="./images/portfolio/cashless payment.jpg"
+              src="./images/portfolio/cashless-payment.jpg"
               alt="cashless payment"
               width="360"
               height="300"
@@ -159,7 +159,7 @@
           </li>
           <li>
             <img
-              src="./images/portfolio/meditation app.jpg"
+              src="./images/portfolio/meditation-app.jpg"
               alt="mediation app"
               width="360"
               height="300"
@@ -169,7 +169,7 @@
           </li>
           <li>
             <img
-              src="./images/portfolio/taxi service.jpg"
+              src="./images/portfolio/taxi-service.jpg"
               alt="taxi service"
               width="360"
               height="300"
@@ -179,7 +179,7 @@
           </li>
           <li>
             <img
-              src="./images/portfolio/screen illustrations.jpg"
+              src="./images/portfolio/screen-illustrations.jpg"
               alt="screen illustrations"
               width="360"
               height="300"
@@ -189,7 +189,7 @@
           </li>
           <li>
             <img
-              src="./images/portfolio/online course.jpg"
+              src="./images/portfolio/online-course.jpg"
               alt="online course"
               width="360"
               height="300"
