--- a/index.html
+++ b/index.html
@@ -20,11 +20,14 @@
     <!--Header-->
     <header>
       <nav>
-        <a class="logo" href="./index.html"
-          ><span class="web-logo">Web</span
-          ><span class="studio-logo">Studio</span>
-        </a>
         <ul>
+          <li>
+            <a class="logo" href="./index.html"
+              >Web
+              <span class="studio-logo">Studio</span>
+            </a>
+          </li>
+
           <li>
             <a class="link-hover" href="">Studio</a>
           </li>
@@ -36,7 +39,7 @@
           </li>
         </ul>
       </nav>
-      <address>
+      <address class="contacts-style">
         <ul>
           <li>
             <a class="link-hover-contacts" href="mailto:info@devstudio.com"
@@ -54,14 +57,12 @@
     <!--Main-->
     <main>
       <!-- Section1 -->
-      <section class="section-background">
-        <h1>
+      <section>
+        <h1 class="section-background">
           Effective Solutions <br />
           for Your Business
         </h1>
-        <button class="button-style" type="button">
-          <span class="button-text">Order Service</span>
-        </button>
+        <button class="button-style" type="button">Order Service</button>
       </section>
       <!-- Section2 -->
       <section>
@@ -99,20 +100,20 @@
         </ul>
       </section>
       <!-- Section3 Our team  -->
-      <section>
+      <section class="third-section-background">
         <h2 class="second-header-style">Our Team</h2>
         <ul>
-          <li>
+          <li class="team-list-background">
             <img src="./images/team/mark.jpg" alt="Mark Guerrero" width="264" />
             <h3 class="third-header-style">Mark Guerrero</h3>
             <p class="third-header-body">Product Designer</p>
           </li>
-          <li>
+          <li class="team-list-background">
             <img src="./images/team/tom.jpg" alt="Tom Ford" width="264" />
             <h3 class="third-header-style">Tom Ford</h3>
             <p class="third-header-body">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-list-background">
             <img
               src="./images/team/camila.jpg"
               alt="Camila Garcia"
@@ -121,7 +122,7 @@
             <h3 class="third-header-style">Camila Garcia</h3>
             <p class="third-header-body">Marketing</p>
           </li>
-          <li>
+          <li class="team-list-background">
             <img
               src="./images/team/daniel.jpg"
               alt="Daniel Wilson"
@@ -143,8 +144,7 @@
               width="360"
               height="300"
             />
-
-            <h3 class="third-header-style">Banking app</h3>
+            <h3 class="third-header-style">Banking App</h3>
             <p class="third-header-body">App</p>
           </li>
           <li>
@@ -203,8 +203,7 @@
     <!-- Footer -->
     <footer class="footer-background">
       <a class="logo" href="./index.html"
-        ><span class="web-logo">Web</span
-        ><span class="footer-studio-logo">Studio</span>
+        >Web<span class="footer-studio-logo">Studio</span>
       </a>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
