--- a/index.html
+++ b/index.html
@@ -20,14 +20,11 @@
     <!--Header-->
     <header>
       <nav>
+        <a class="logo" href="./index.html"
+          >Web
+          <span class="studio-logo">Studio</span>
+        </a>
         <ul>
-          <li>
-            <a class="logo" href="./index.html"
-              >Web
-              <span class="studio-logo">Studio</span>
-            </a>
-          </li>
-
           <li>
             <a class="link-hover" href="">Studio</a>
           </li>
@@ -57,8 +54,8 @@
     <!--Main-->
     <main>
       <!-- Section1 -->
-      <section>
-        <h1 class="section-background">
+      <section class="section-background">
+        <h1>
           Effective Solutions <br />
           for Your Business
         </h1>
