--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </a>
         <ul>
           <li>
-            <a class="link-hover" href="">Studio</a>
+            <a class="link-hover" href="./index.html">Studio</a>
           </li>
           <li>
             <a class="link-hover" href="">Portfolio</a>
@@ -55,7 +55,7 @@
     <main>
       <!-- Section1 -->
       <section class="section-background">
-        <h1>
+        <h1 class="first-header-style">
           Effective Solutions <br />
           for Your Business
         </h1>
