--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
     <header>
       <nav>
         <a class="logo" href="./index.html"
-          >Web
-          <span class="studio-logo">Studio</span>
+          >Web<span class="studio-logo">Studio</span>
         </a>
         <ul>
           <li>
